samples/_failures_safe/1761124770_3d4d80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7a055d40.c: In function ‘main’:
./samples/SAFE/__tmp_7a055d40.c:147:5: error: expected expression at end of input
  147 |     add_edge(&g, 0,
      |     ^~~~~~~~
./samples/SAFE/__tmp_7a055d40.c:147:5: error: expected declaration or statement at end of input
